--- a/discount.html
+++ b/discount.html
@@ -1,9 +1,11 @@
-<p>Дисконт</p>
+<h1>Дисконт</h1>
 
     <p><b>Дисконт</b> (англ.<i> discount)</i> — <b>экономический термин</b>, в буквальном переводе
     с английского означает <i>скидка</i>, <i>вычет</i>, <i>разница</i>[1]. В зависимости от 
     <b>контекста</b>, может принимать различные значения.</p>
 
+    <h2>Дисконт на товарном рынке</h2>
+    
  <p>
     Скидка с объявленной прейскурантной цены товара или услуги,
     предоставляемая продавцом потребителю во время
