--- a/discount.html
+++ b/discount.html
@@ -1,10 +1,14 @@
 <h1>Дисконт</h1>
+<p>
+   <img src="discount1.jpg" height="100">
+   </p>
 
     <p><b>Дисконт</b> (англ.<i> discount)</i> — <b>экономический термин</b>, в буквальном переводе
     с английского означает <i>скидка</i>, <i>вычет</i>, <i>разница</i>[1]. В зависимости от 
     <b>контекста</b>, может принимать различные значения.</p>
 
     <h2>Дисконт на товарном рынке</h2>
+   
     
  <p>
     Скидка с объявленной прейскурантной цены товара или услуги,
@@ -17,3 +21,7 @@
     как уловка, чтобы заручиться «верностью» клиента, или предоставляются 
     по требованию крупного и влиятельного покупа
  </p>
+ <p>
+   <img src="discount3.jpg" height="45%">
+   <img src="discount2.jpg" height="45%">
+   </p>
