--- a/lab2/usb.html
+++ b/lab2/usb.html
@@ -31,6 +31,42 @@
                 дисков.
 
             <h2>Преимущества</h2>
+            <ol>
+                <li>Простое управление</li>
+                <li> Поддержка любого типа флеш носителей и USB жестких дисков
+                    <ul>
+                        <li>вне зависимости от использования</li>
+                        <li>вне зависимости от внешнего вида</li>
+                        <li>вне зависимости от емкости хранилища</li>
+                    </ul>
+                </li>
+                <li> Различные режимы копирования
+                    <ul>
+                        <li>синхронный режим</li>
+                        <li>асинхронный режим</li>
+                    </ul>
+                </li>
+                <li> Не требуется время для загрузки и остывания</li>
+                <li> Высокая скорость копирования - 2 Гб/мин</li>
+            </ol>
+            <div>А также:</div>
+            <ol start="6">
+                <li>Автономная система под ключ, компьютер не требуется</li>
+                <li>Копирование и сравнение с оригиналом, что исключает ошибки</li>
+                <li>ЖК-дисплей с отображением всего, что в данный момент делает дубликатор</li>
+            </ol>
+            <div>И еще:</div>
+            <ol start="9">
+                <li> Дубликаторы USB и Flash обычно представляют собой надежные устройства, 
+                    которые обеспечивают стабильную и эффективную работу при копировании данных</li>
+                <li>стройства дублирования USB и Flash обычно очень просты в использовании и не требуют специальных 
+                    навыков или знаний для работы с ними.</li>
+                <li>Некоторые дубликаторы USB и Flash имеют программные функции, 
+                    которые позволяют настраивать параметры копирования данных</li>
+                <li>Поскольку дубликатор USB и Flash позволяют одновременно копировать данные на несколько устройств, 
+                    это уменьшает затраты на периферийные устройства и упрощает процесс копирования для пользователей и организаций.</li>
+
+            </ol>
         </main>
 
         <footer>
