--- a/lab2/usb.html
+++ b/lab2/usb.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <title>Ефимова Юлия Алексеевна. Текст о дубликаторах USB </title>
     </head>
-    <body style="background-color: lightblue; color: maroon;">
+    <body style="background-color: whitesmoke; color: rgb(33, 64, 95); font-family: Arial;">
         <header>
             НГТУ, ФБ, Лабораторная работа 2
             <hr>
