--- a/lab2/usb.html
+++ b/lab2/usb.html
@@ -4,8 +4,8 @@
         <meta charset="utf-8">
         <title>Ефимова Юлия Алексеевна. Текст о дубликаторах USB </title>
     </head>
-    <body style="background-color: whitesmoke; color: rgb(33, 64, 95); font-family: Arial;">
-        <header>
+    <body style="background-color: whitesmoke; color: rgb(33, 64, 95); font-family: Arial; margin: 0px;">
+        <header style="background-color: rgb(33, 64, 95); color: whitesmoke; padding: 3px; font-size: 12pt;">
             НГТУ, ФБ, Лабораторная работа 2
             <hr>
         </header>
