--- a/lab2/usb.html
+++ b/lab2/usb.html
@@ -196,8 +196,7 @@
 
         </main>
 
-        <footer>
-            <hr>
+        <footer style="background-color: rgb(33, 64, 95); color: whitesmoke; padding: 3px; font-size: 12pt; font-style: italic; text-align: right;">
             &copy; Ефимова Юлия, ФБИ-22, 2 курс, 2024
         </footer>
 
