--- a/lab2/usb.html
+++ b/lab2/usb.html
@@ -71,11 +71,11 @@
             <h2>USB-дубликаторы для флешек</h2>
 
             <table border="1" width="100%">
-                <tr>
+                <tr style="font-weight: bold;">
                     <td colspan= "4">USB-дубликаторы серии Super-Tower</td>
                 </tr>
 
-                <tr>
+                <tr style="font-weight: bold;">
                     <td>Модель</td>
                     <td>Количество портов</td>
                     <td>Цена, руб</td>
@@ -134,11 +134,11 @@
             <h2>USB-дубликаторы для жёстких дисков</h2>
 
             <table border="1" width="100%">
-                <tr>
+                <tr style="font-weight: bold;">
                     <td colspan= "4">“USB-дубликаторы Intelligent Series <br><i>с поддержкой внешних жестких дисков USB!</i>
                     </td>
                 </tr>
-                <tr>
+                <tr style="font-weight: bold;">
                     <td>Модель</td>
                     <td>Количество <br>жестких дисков</td>
                     <td>Цена, руб</td>
