--- a/lab2/usb.html
+++ b/lab2/usb.html
@@ -13,6 +13,7 @@
             <h1> Дубликатор USB, дубликатор FLASH </h1>
 
             <h2>Общая информация</h2>
+            <div>
 
                 Дубликатор USB, дубликатор флэш-карт или дубликатор flash &ndash;
                 это очень интересная и полезная вещь, предназначенная для
@@ -24,11 +25,15 @@
                 это можно будет сделать и на обычном компьютере, но если вам необходимо сделать таких копий 3 и более &ndash; например 40 &ndash; это уже проблематично для ПК, 
                 а вот специальный дубликатор USB или дубликатор флэшек &ndash; запросто справится с этой работой, причем за
                 очень небольшое время. Копирование флешек на USB&ndash;дубликаторе &ndash; это удобно и быстро.
+            </div>
+            
+            <div>
                 Процесс копирования флэшек или USB жестких дисков происодит асинхронно. Дубликатор USB управляется с помощью
-                контроллера, на котором всего 4 кнопки. Высокоскоростное копирование и наличие функцией Compare (сверка с оригиналом), 
+                контроллера, на котором всего 4 кнопки. Высокоскоростное копирование и наличие функцией <span title="патентованная технология!" style="background-color: rgb(33, 64, 95); color: whitesmoke; padding: 3px; border-radius: 5px;">Compare</span> (сверка с оригиналом), 
                 гарантирует успешность копии. Надежный, простой и удобный дубликатор USB &ndash; лучший компаньон для любого бизнеса.
                 Также продаем дубликаторы для копирования внешних жестких
                 дисков.
+            </div>
 
             <h2>Преимущества</h2>
             <ol>
