--- a/lab2/usb.html
+++ b/lab2/usb.html
@@ -87,7 +87,7 @@
                     <td>Наличие</td>
                 </tr>
                 <tr>
-                    <td>USB-3 (UB300)</td>
+                    <td>USB-3 (UB300) <sup style="background-color: yellow; color: red;" title="Модель USB-3 (UB300) появилась в продаже 27.02.2024">New</sup></td>
                     <td>3</td>
                     <td>5000</td>
                     <td rowspan= "2">В наличии</td>
@@ -105,7 +105,7 @@
                     <td rowspan="6">на заказ</td>
                 </tr>
                 <tr>
-                    <td>Super USB 1-23 </td>
+                    <td>Super USB 1-23 <sup style="background-color: yellow; color: red;" title="Модель USB 1-23 появилась в продаже 25.02.2024">New</sup></td>
                     <td>24</td>
                     <td>по запросу</td>
                     <!-- <td>на заказ</td> -->
@@ -123,7 +123,7 @@
                     <!-- <td>на заказ</td> -->
                 </tr>
                 <tr>
-                    <td>Super USB 1-55</td>
+                    <td>Super USB 1-55 <sup style="background-color: yellow; color: red;" title="Модель Super USB 1-55 появилась в продаже 20.02.2024">New</sup> </td>
                     <td>56</td>
                     <td>по запросу</td>
                     <!-- <td>на заказ</td> -->
