--- a/lab2/usb.html
+++ b/lab2/usb.html
@@ -140,7 +140,7 @@
 
             <table border="1" width="100%">
                 <tr style="font-weight: bold;">
-                    <td colspan= "4">“USB-дубликаторы Intelligent Series <br><i>с поддержкой внешних жестких дисков USB!</i>
+                    <td colspan= "4" style="text-align: center;">“USB-дубликаторы Intelligent Series <br><i>с поддержкой внешних жестких дисков USB!</i>
                     </td>
                 </tr>
                 <tr style="font-weight: bold;">
@@ -153,7 +153,7 @@
                     <td>Intelligent USB 1-9<sup>A</sup></td>
                     <td>10</td>
                     <td>205 000</td>
-                    <td rowspan= "2">в наличии</td>
+                    <td rowspan= "2" style="color: olive;">в наличии</td>
                 </tr>
                 <tr>
                     <td>Intelligent USB 1-19<sup>X</sup></td>
@@ -165,7 +165,7 @@
                     <td>Intelligent USB 1-29<sup>S</sup></td>
                     <td>30</td>
                     <td>370&nbsp;000</td>
-                    <td rowspan="3">в пути</td>
+                    <td rowspan="3" style="color: steelblue;">в пути</td>
                 </tr>
                 <tr>
                     <td>Intelligent USB 1-29<sup>G</sup></td>
