--- a/lab2/usb.html
+++ b/lab2/usb.html
@@ -3,6 +3,23 @@
     <head>
         <meta charset="utf-8">
         <title>Ефимова Юлия Алексеевна. Текст о дубликаторах USB </title>
+        <style>
+            li {
+                color: cadetblue;
+                font-style: italic;
+            }
+            h2 {
+               color: darkolivegreen;
+               margin: 20px; 
+               font-size: 20px;
+             }
+             h1 {
+                color: darkgreen;
+                margin: 30px;
+                font-size: 35px;
+             }
+
+        </style>
     </head>
     <body style="background-color: whitesmoke; color: rgb(33, 64, 95); font-family: Arial; margin: 0px;">
         <header style="background-color: rgb(33, 64, 95); color: whitesmoke; padding: 3px; font-size: 12pt;">
