--- a/index.html
+++ b/index.html
@@ -6,6 +6,30 @@
     <title>Ефимова Юлия Алексеевна. Лабораторные работы по WEB-программированию</title>
 </head>
 <body>
+    <header>
+         НГТУ, ФБ, Лабораторная работа 2
+        <hr>
+
+    </header>
+    <main>
+        <h1>Лабораторные работы по WEB-программированию</h1>
+
+        <ol>
+            <li>
+                <a href="lab1/lab 1.html">Лабораторная работа 1</a>
+            </li>
+
+            <li>
+                <a href="lab2/lab2.html">Лабораторная работа 2</a>
+            </li>
+        </ol>
+
+
+    </main>
+    <footer>
+        <hr>
+        &copy; Ефимова Юлия, ФБИ-22, 2 курс, 2024
+    </footer>
     
 </body>
 </html>
