--- a/lab2/lab2.html
+++ b/lab2/lab2.html
@@ -9,7 +9,9 @@
             НГТУ, ФБ, Лабораторная работа 2
             <hr>
         </header>
-        <main></main>
+        <main>
+            <a href="usb.html">Дубликатор USB, дубликаторы FLASH</a>
+        </main>
 
         <footer>
             <hr>
