Добавление ссылки на новый файл

--- a/lab3/lab3.html
+++ b/lab3/lab3.html
@@ -12,7 +12,9 @@
             НГТУ, ФБ, Лабораторная работа 3
         </header>
 
-        <main></main>
+        <main>
+            <a href="gone.html">Унесенные ветром</a>
+        </main>
 
         <footer>
             &copy; Ефимова Юлия, ФБИ-22, 2 курс, 2024
