--- a/lab3/lab3.html
+++ b/lab3/lab3.html
@@ -14,6 +14,9 @@
 
         <main>
             <a href="gone.html">Унесенные ветром</a>
+            <a href="text.html">Оформление текста</a>
+            <a href="citations.html">Оформление текста</a>
+
         </main>
 
         <footer>
