--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ефимова Юлия Алексеевна. Лабораторные работы по WEB-программированию</title>
-    <link rel="stylesheet" href="main.css"
+    <link rel="stylesheet" href="main.css"> 
 </head>
 <body>
     <header>
@@ -22,6 +22,9 @@
 
             <li>
                 <a href="lab2/lab2.html">Лабораторная работа 2</a>
+            </li>
+            <li>
+                <a href="lab3/lab3.html">Лабораторная работа 3</a>  
             </li>
         </ol>
 
