--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="main.css"> 
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <link rel="icon" href="favicon-32x32.png">
-    
+
 </head>
 <body>
     <header>
@@ -28,6 +28,9 @@
             </li>
             <li>
                 <a href="lab3/lab3.html">Лабораторная работа 3</a>  
+            </li>
+            <li>
+                <a href="lab4/lab4.html">Лабораторная работа 4</a>
             </li>
         </ol>
 
