--- a/lab4/lab4.html
+++ b/lab4/lab4.html
@@ -15,6 +15,11 @@
         </header>
 
         <main>
+            <a href="book.html">Книга</a>
+            <a href="cards.html">Карты</a>
+            <a href="comic.html">Комикс</a>
+            <a href="display.html">Дисплей</a>
+            <a href="position.html">position</a>
 
         </main>
 
