--- a/index.html
+++ b/index.html
@@ -35,6 +35,9 @@
             <li>
                 <a href="lab4/lab4.html">Лабораторная работа 4</a>
             </li>
+            <li>
+                <a href="lab5/lab5.html">Лабораторная работа 5</a>
+            </li>
         </ol>
     </div>
 
