--- a/lab5/arithmetic.html
+++ b/lab5/arithmetic.html
@@ -14,10 +14,18 @@
                 let result = a + b;
                 alert('Сумма ' + a +' и ' + b + ' равна ' + result);
             }
-
-            showSum();
+            function showAutor() {
+                let author =  'Автор страницы: \nЕфимова Юлия Алексеевна';
+                alert(author);
+            }
+            function Greeting() {
+                alert('Приветствую вас! \nКто никогда не совершал ошибок, тот никогда не пробовал ничего нового.')
+            }
         </script>
         <style>
+            header {
+                cursor: pointer
+            }
             .message {
             border: 4px solid brown;
             background-color: rgb(32, 11, 47);
@@ -27,6 +35,9 @@
             text-align: center;
             cursor: pointer;
             display: inline-block;          
+            }
+            footer{
+            cursor: pointer;
             }
         </style>
     </head>
@@ -38,10 +49,10 @@
 
         <main>
             <div class="message" onclick="showSum()">Сколько будет 5154+7891?</div>
-            <div class="message">Узнать, кто автор страницы</div>
+            <div class="message" onclick="showAutor()">Узнать, кто автор страницы</div>
         </main>
 
-        <footer>
+        <footer ondblclick="Greeting()">
             &copy; Ефимова Юлия, ФБИ-22, 2 курс, 2024
         </footer>
     </body>
