--- a/lab5/arithmetic.html
+++ b/lab5/arithmetic.html
@@ -18,6 +18,33 @@
                 let result = a + b;
                 alert('Сумма ' + a +' и ' + b + ' равна ' + result);
             }
+            function showRazn() {
+            let inputA = document.getElementById('numberA');
+            let inputB = document.getElementById('numberB');
+
+            let a = parseInt(inputA.value);
+            let b = parseInt(inputB.value);
+            let result = a - b;
+            alert('Разность ' + a + ' и ' + b + ' равна ' + result);
+        }
+            function showProizv() {
+                let inputA = document.getElementById('numberA');
+                let inputB = document.getElementById('numberB');
+
+                let a = parseInt(inputA.value);
+                let b = parseInt(inputB.value);
+                let result = a * b;
+                alert('Произведение ' + a + ' и ' + b + ' равно ' + result);
+            }
+            function showDel() {
+            let inputA = document.getElementById('numberA');
+            let inputB = document.getElementById('numberB');
+
+            let a = parseInt(inputA.value);
+            let b = parseInt(inputB.value);
+            let result = a / b;
+            alert('Деление ' + a + ' и ' + b + ' равно ' + result);
+        }
             function showAutor() {
                 let author =  'Автор страницы: \nЕфимова Юлия Алексеевна';
                 alert(author);
@@ -55,6 +82,9 @@
             <label>Первое число <input type="number" value="5154" id="numberA"></label><br>
             <label>Второе число <input type="number" value="7891" id="numberB"></label><br>
             <div class="message" onclick="showSum()">Найти сумму чисел</div>
+            <div class="message" onclick="showRazn()">Найти разность чисел</div>
+            <div class="message" onclick="showProizv()">Найти произведение чисел</div>
+            <div class="message" onclick="showDel()">Найти деление чисел</div>
             <div class="message" onclick="showAutor()">Узнать, кто автор страницы</div>
         </main>
 
