--- a/lab5/lab5.html
+++ b/lab5/lab5.html
@@ -1,4 +1,4 @@
-\\<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="ru">
     <head>
         <meta charset="UTF-8">
@@ -6,15 +6,21 @@
         <title>Ефимова Юлия Алексеевна. Лабораторная 5"</title>
         <link rel="stylesheet" href="../main.css">
         <link rel="shortcut icon" href="../favicon.ico" type="image/x-icon">
-    <link rel="icon" href="../favicon-32x32.png">
+        <link rel="icon" href="../favicon-32x32.png">
     </head>
 
     <body>
-        <header onclick="showAutor()">
+        <header>
             НГТУ, ФБ, Лабораторная работа 5
         </header>
 
         <main>
+            <a href="arithmetic.html">Книга</a>
+            <a href="cart.htm">Карты</a>
+            <a href="circles.html">Комикс</a>
+            <a href="filters.html">Дисплей</a>
+            
+
         </main>
 
         <footer>
