--- a/lab2/usb.html
+++ b/lab2/usb.html
@@ -99,7 +99,7 @@
 
                 <tr style="font-weight: bold;">
                     <td>Модель</td>
-                    <td>Количество портов</td>
+                    <td style="background-color: blue; color: white"> Количество портов</td>
                     <td>Цена, руб</td>
                     <td>Наличие</td>
                 </tr>
