--- a/lab5/lab5.html
+++ b/lab5/lab5.html
@@ -15,10 +15,10 @@
         </header>
 
         <main>
-            <a href="arithmetic.html">Книга</a>
-            <a href="cart.htm">Карты</a>
-            <a href="circles.html">Комикс</a>
-            <a href="filters.html">Дисплей</a>
+            <a href="arithmetic.html">Арифметика</a>
+            <a href="cart.htm">Корзина</a>
+            <a href="circles.html">Шары</a>
+            <a href="filters.html">Фильтры</a>
             
 
         </main>
