--- a/lab6/lab6.html
+++ b/lab6/lab6.html
@@ -11,10 +11,14 @@
 
     <body>
         <header>
-            НГТУ, ФБ, Лабораторная работа 5
+            НГТУ, ФБ, Лабораторная работа 6
         </header>
 
         <main>
+            <a href="random.html">Угадай число</a>
+            <a href="cart.html">Корзина товаров</a>
+            <a href="color.html">Перебор цветов</a>
+            <a href="filter.html">Фильтры</a>
             
         </main>
 
