--- a/index.html
+++ b/index.html
@@ -38,6 +38,12 @@
             <li>
                 <a href="lab5/lab5.html">Лабораторная работа 5</a>
             </li>
+            <li>
+                <a href="lab6/lab6.html">Лабораторная работа 6</a>
+            </li>
+            <li>
+                <a href="lab7/lab7.html">Лабораторная работа 7</a>
+            </li>
         </ol>
     </div>
 
