--- a/lab6/filter.html
+++ b/lab6/filter.html
@@ -69,7 +69,7 @@
 
                 <button onclick="filter()">ОК</button><br>
 
-                <img id="wear">
+                <img id="wear" width="400px">
             </div>
         </main>
 
