--- a/lab7/lab7.html
+++ b/lab7/lab7.html
@@ -45,6 +45,45 @@
             main.appendChild(newBlock);
         }
         }
+        function add20_50() {
+            let main = document.querySelector('main');
+            for (let i = 20; i<=50; i+=2.5) {
+                let newBlock = document.createElement('div');
+                newBlock.style.width = '340px';
+                newBlock.style.border = '1px solid black';
+                newBlock.style.backgroundColor = 'white';
+                newBlock.style.color = 'pink'
+                newBlock.style.height = '100px';
+
+                newBlock.innerHTML = '${i}';
+
+                main.appendChild(newBlock);
+            }
+        }
+        function add10_80() {
+            let main = document.querySelector('main');
+            let buttons = Array.from(main.querySelectorAll('button')); 
+            let blocks = Array.from(main.querySelectorAll('div:not(button)')); 
+
+            blocks.forEach(block => block.remove()); 
+            for (let i = 10; i >= -80; i -= 3) {
+                let newBlock = document.createElement('div');
+                newBlock.style.backgroundColor = 'white';
+                newBlock.style.height = '40px';
+                newBlock.style.border = '2px solid black';
+                newBlock.style.marginTop = '10px';
+                newBlock.style.borderRadius = '100%';
+                newBlock.innerHTML = `Круг со значением: ${i}`;
+                newBlock.style.textAlign = 'center';
+                newBlock.style.paddingTop = '19px';
+                newBlock.style.width = '180px';
+                newBlock.style.height = '90px';
+                newBlock.style.display = 'inline-block'; 
+                newBlock.style.color = 'grey';
+
+                main.appendChild(newBlock);
+                }
+            }
         </script>
     </head>
 
@@ -56,6 +95,8 @@
         <main>
             <button onclick="addNewBlock()">Добавить блок</button>
             <button onclick="addNewBlocks()">Добавить блоки</button>
+            <button onclick="add20_50()">20 => 50</button>
+            <button onclick="add10_80()">10=>-80</button>
         <input type="number" id="blocksNumber" placeholder="Введите кол-во блоков" style="width: 20%;">
             
         </main>
