--- a/lab7/lab7.html
+++ b/lab7/lab7.html
@@ -83,7 +83,34 @@
 
                 main.appendChild(newBlock);
                 }
+        }
+        function opacity() {
+            let main = document.querySelector('main');
+            let buttons = Array.from(main.querySelectorAll('button')); 
+            let blocks = Array.from(main.querySelectorAll('div:not(button)')); 
+
+            blocks.forEach(block => block.remove()); 
+            let startingOpacity = 0;
+            let opacityIncrement = 10; 
+            for (let i = 1; i <= 10 ; i++) {
+                let newBlock = document.createElement('div');
+                newBlock.style.backgroundColor = '#77c081';
+                newBlock.style.height = '40px';
+                newBlock.style.border = '2px solid black';
+                newBlock.style.marginTop = '7px';
+                newBlock.style.borderRadius = '20px';
+                newBlock.innerHTML = `Полупрозрачный блок со значением: ${i}`;
+                newBlock.style.textAlign = 'center';
+                newBlock.style.paddingTop = '11px';
+                newBlock.style.width = '180px';
+
+                let currentOpacity = startingOpacity + opacityIncrement * i;
+
+                newBlock.style.opacity = `${currentOpacity}%`;
+
+                main.appendChild(newBlock);
             }
+        }
         </script>
     </head>
 
@@ -97,6 +124,7 @@
             <button onclick="addNewBlocks()">Добавить блоки</button>
             <button onclick="add20_50()">20 => 50</button>
             <button onclick="add10_80()">10=>-80</button>
+            <button onclick="opacity()">Полупрозрачные блоки</button>
         <input type="number" id="blocksNumber" placeholder="Введите кол-во блоков" style="width: 20%;">
             
         </main>
