--- a/lab7/lab7.html
+++ b/lab7/lab7.html
@@ -111,6 +111,38 @@
                 main.appendChild(newBlock);
             }
         }
+        function colorBlocks() {
+            let main = document.querySelector('main');
+            let numberOfBlocks = parseInt(document.getElementById('blocksNumberColor').value);
+            let buttons = Array.from(main.querySelectorAll('button')); 
+            let blocks = Array.from(main.querySelectorAll('div:not(button)')); 
+
+            blocks.forEach(block => block.remove()); 
+
+            for (let i = 0; i < numberOfBlocks; i++) {
+                let newBlock = document.createElement('div');
+                newBlock.style.height = '40px';
+                newBlock.style.marginTop = '10px';
+                newBlock.style.borderRadius = '100%';
+                newBlock.innerHTML = `Блок № ${numberOfBlocks - i}`;
+                newBlock.style.textAlign = 'center';
+                newBlock.style.paddingTop = '19px';
+                newBlock.style.marginLeft = '10px'
+                newBlock.style.display = 'inline-block'; 
+                newBlock.style.width = '100px'
+                if (i % 2 == 0) {
+                    newBlock.style.backgroundColor = 'red';
+                    newBlock.style.color = 'white';
+                    newBlock.style.border = '2px solid white';
+                } else {
+                    newBlock.style.backgroundColor = 'white';
+                    newBlock.style.color = 'red';
+                    newBlock.style.border = '2px solid red';
+
+                }
+                main.appendChild(newBlock);
+            }
+        }
         </script>
     </head>
 
@@ -124,8 +156,10 @@
             <button onclick="addNewBlocks()">Добавить блоки</button>
             <button onclick="add20_50()">20 => 50</button>
             <button onclick="add10_80()">10=>-80</button>
+            <button class="button" onclick="colorBlocks()">Красный/белый</button><br><br>
             <button onclick="opacity()">Полупрозрачные блоки</button>
         <input type="number" id="blocksNumber" placeholder="Введите кол-во блоков" style="width: 20%;">
+        <input type="number" id="blocksNumberColor" placeholder="Введите кол-во цветных кругов" style="width: 20%;"><br><br>
             
         </main>
 
