--- a/rgz/rgz2.html
+++ b/rgz/rgz2.html
@@ -78,7 +78,7 @@
             <a href="news.html">Новости</a>
             <a href="rgz2.html">О компании</a>
             <a href="contakt.html">Контакты</a>
-            <a href="calculator.html">Калькурятор</a>
+            <a href="calcu.html">Калькурятор</a>
         </header>
         <main>
             <img src="https://www.vtb.am/img/vtb-logo.gif" height="100%" width="100%"><br>
