--- a/rgz/news.html
+++ b/rgz/news.html
@@ -79,7 +79,7 @@
                 <a href="news.html">Новости</a>
                 <a href="rgz2.html">О компании</a>
                 <a href="contakt.html">Контакты</a>
-                <a href="calculator.html">Калькурятор</a>
+                <a href="calcu.html">Калькурятор</a>
             </div>
             <h1>Новости</h1>
     </header>
