--- a/lab8/date.html
+++ b/lab8/date.html
@@ -26,7 +26,17 @@
         </header>
 
         <main>
-            <div id="current-date"></div>
+            <div id="current-date"></div><br>
+            <div class="daysWeek">
+                <label for="day">День:</label>
+                <input type="number" id="day" min="1" max="31" required>
+                <label for="month">Месяц:</label>
+                <input type="number" id="month" min="1" max="12" required>
+                <label for="year">Год:</label>
+                <input type="number" id="year" min="1900" max="2100" required>
+                <button onclick="getDayOfWeek()">День недели</button>
+                <div id="day-of-week"></div>
+            </div>
         </main>
 
         <footer>
