--- a/index.html
+++ b/index.html
@@ -47,6 +47,9 @@
                 <li>
                     <a href="lab8/lab8.html">Лабораторная работа 8</a>
                 </li>
+                <li>
+                    <a href="rgz/rgz2.html">Расчетно-графическое задание</a>
+                </li>
             </ol>
         </div>
     </main>
