--- a/lab8/lab8.html
+++ b/lab8/lab8.html
@@ -16,6 +16,8 @@
 
         <main>
             <a href="date.html">Вывод даты</a>
+            <a href="get-days-count.html">День рождение</a>
+            <a href="time.html">Аналоговые часы</a>
         </main>
 
         <footer>
